[package]
name = "ragc"
version = "0.1.0"
authors = ["Om Dighe"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
ragc-core = { path = "../ragc-core" }
ragc-binaries = { path = "../ragc-binaries" }
ragc-peripherals = { path = "../ragc-peripherals", features = [
    "vagc-peripherals",
    "std",
] }


env_logger = "0.8.4"
crossbeam-channel = "0.5"


clap = "2.33.3"
log = "0.4"
ctrlc = "3.2.0"
heapless = "0.7"
